Add profile update route
