# src/resources/account/account.types.ts
@@ -3,3 +3,5 @@ import { AccountEntity } from "./account.entity";
 export interface AccountResponse extends Omit<AccountEntity, "password"> {}
 
 export interface AccountCreateBody extends Pick<AccountEntity, "email" | "name" | "password"> {}
+
+export interface AccountUpdateBody extends Partial<Pick<AccountEntity, "name">> {}
